package entities.updateables.mario.actions;

import utils.Prioritizable;

public interface StrategyMarioAction extends Prioritizable {
    public void execute();
}

